--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Re-classify .yy files (for GMS 2 projects)
-*.yy linguist-language=GML
+# *.yy linguist-language=GML
+# Ignore .yy files for language statistics 
+*.yy linguist-generated=true
